init class Computer who will supervise the game

--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
 <body>
 
 
+<input type="button" value="1">
+<input type="button" value="2">
+<input type="button" value="3">
+<input type="button" value="4">
+
 <script src="./javascript/script.js">
 
 </script>
