everything is done, scoreboard working, timout ok etc..

--- a/index.html
+++ b/index.html
@@ -41,6 +41,21 @@
     <input type="button" value="Reset the game" onclick="Reset()">
 </div>
 
+<p id="rules">The rules are simple, watch what the computer do, when its your turn, do the same and hope to get through
+    as many round as possible. The rounds are automated, just wait 2s between each round</p>
+
+
+<div id="scoreboard" style="display: none">
+    <h2>Last score : </h2>
+    <div class="info">
+        <h2>Round n° : </h2>
+        <p id="roundBoard">0</p>
+    </div>
+    <div class="info">
+        <h2>Success streak : </h2>
+        <p id="successBoard">0</p>
+    </div>
+</div>
 <script src="./javascript/script.js">
 
 </script>
