added replay button uder scoreboard

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
         <h2>Success streak : </h2>
         <p id="successBoard">0</p>
     </div>
+    <input type="button" value="replay" onclick="Start()">
 </div>
 <script src="./javascript/script.js">
 
